# django-admin-glass

./: CHANGELOG.md  README.md  pyproject.toml
.claude/worktrees/ecstatic-haslett/: .gitignore
.claude/worktrees/ecstatic-haslett/docs/: quickstart.md
.claude/worktrees/ecstatic-haslett/glass_admin/: __init__.py
.claude/worktrees/ecstatic-haslett/glass_admin/static/glass_admin/css/: ai.css  liquidglass.css
.claude/worktrees/ecstatic-haslett/glass_admin/static/glass_admin/js/: glass_admin.js
.claude/worktrees/ecstatic-haslett/tests/: test_apps.py
glass_admin/: apps.py  middleware.py
glass_admin/static/glass_admin/css/: ai.css  liquidglass.css
glass_admin/templates/admin/: base_site.html
glass_admin/templatetags/: glass_admin_tags.py
tests/: conftest.py  settings.py  test_middleware.py  test_theme_selection.py
