[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-glass"
version = "0.1.0"
description = "Modern glassmorphism & AI themes for Django admin — add one line to INSTALLED_APPS"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SC", email = "oslo0322@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["Django>=4.2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["django", "admin", "theme", "glassmorphism", "css"]

[project.urls]
Homepage = "https://github.com/shaochun/django-glass"
Repository = "https://github.com/shaochun/django-glass"
"Bug Tracker" = "https://github.com/shaochun/django-glass/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-django>=4.5", "coverage[toml]>=7.0"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["glass_admin"]
omit = ["tests/*"]

[tool.setuptools.packages.find]
include = ["glass_admin*"]

[tool.setuptools.package-data]
glass_admin = [
    "templates/**/*",
    "static/**/*",
]
